[tool.poetry]
name = "airspace-docs"
version = "0.1.0"
description = ""
authors = ["Lyle Scott <lyle.scott@cbsinteractive.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-redirects = "^1.0.4"
mkdocs-git-revision-date-localized-plugin = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
